# Archivum

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  config.toml.example  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security.yml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  INDEX_FORMAT.md
src/: cat.rs  checksum.rs  completions.rs  compress.rs  config.rs  diff.rs  index.rs  main.rs  merge.rs  output.rs  prune.rs  repair.rs  restore.rs  scan.rs  search.rs  stats.rs  tar.rs  tar_writer.rs  update.rs  utils.rs  verify.rs
