[package]
name = "archivum"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ankit Chaubey <ankitchaubey.dev@gmail.com>"]
description = "Archivum — deterministic, split, checksummed, compressed archive system with faithful restore"
repository = "https://github.com/ankit-chaubey/Archivum"
homepage = "https://github.com/ankit-chaubey/Archivum"
documentation = "https://github.com/ankit-chaubey/Archivum#readme"
keywords = ["backup", "archive", "tar", "restore", "forensics"]
categories = ["filesystem", "command-line-utilities", "compression"]
readme = "README.md"
exclude = [".github", "*.zip"]

[[bin]]
name = "archivum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
tar = "0.4"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
colored = "2.1"
flate2 = "1.0"
zstd = "0.13"
globset = "0.4"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
